# nla_exam

./: )  .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  eigensolver.txt  inverse_power_method.hh  main.cc  makefile  qr.hh  run.sh  run_all.sh  run_double.sh  run_eigen.sh  test  test.cc  test.hh  test.sh  test3  test6  test_cases.cc  test_cases.hh  testcases.md  todo.txt  trash.cc
evaluation/: CMakeLists.txt  createMatrix.hh  main.cc  run.sh  test.cc  test.hh  test_cases.cc
evaluation/profile/: a.out  gmon.out  makefile  out.perf  perf.data  perf.data.old  profile.cc  sudo
helpfunctions/: createMatrix.hh  helpfunctions.hh
include/: helpfunctions.hh  herm_qr.hh  inverse_power_method.hh  new_qr.hh  qr.hh  regular_qr.hh  sfinae.hh  symm_qr.hh  test.hh
lapack/: lapack_interface_impl.hh  lapack_support.hh
matrix/: eigen_wrapper.hh  matrix_classes.hh
offizielles/: Bachelorarbeit_Anzeige-100.doc
small_tests/: householder  makefile  test_householder.cc  test_householder.hh
testresults/eigenvalues/: 2023-01-30 10:47:17  2023-01-30 11:42:12  2023-01-30 11:52:08  2023-01-30 12:47:12  2023-01-30 12:49:38  2023-01-30 12:52:43  2023-01-30 14:24:32  2023-01-30 19:25:34  2023-01-30 19:29:00  2023-01-30 19:33:16  2023-01-30 19:34:19  2023-01-30 19:40:40  2023-01-30 19:48:52  2023-01-31 11:10:00  2023-01-31 11:18:44  2023-01-31 14:17:55  2023-01-31 14:18:20  2023-01-31 14:20:17  2023-01-31 14:32:04  2023-01-31 14:38:53  2023-01-31 14:43:04  2023-01-31 14:45:19  2023-01-31 14:49:07  2023-01-31 15:20:55  2023-01-31 15:26:03  2023-01-31 15:29:51  2023-01-31 15:36:51  2023-01-31 15:38:25  2023-01-31 16:13:44  2023-01-31 16:17:13  2023-01-31 16:20:51  2023-01-31 16:26:43  2023-01-31 16:42:35  2023-01-31 16:42:54  2023-01-31 16:55:17  2023-01-31 16:55:23  2023-01-31 20:16:17  2023-01-31 20:20:21  2023-01-31 20:22:46  2023-01-31 20:23:15  (+75 more)
testresults/summary/: 2023-01-31 11:10:00  2023-01-31 11:18:44  2023-01-31 14:17:55  2023-01-31 14:18:20  2023-01-31 14:20:17  2023-01-31 14:32:04  2023-01-31 14:38:53  2023-01-31 14:43:04  2023-01-31 14:49:07  2023-01-31 15:20:55  2023-01-31 15:26:03  2023-01-31 15:29:51  2023-01-31 15:36:51  2023-01-31 15:38:25  2023-01-31 16:13:44  2023-01-31 16:17:13  2023-01-31 16:20:51  2023-01-31 16:26:43  2023-01-31 16:42:35  2023-01-31 16:42:54  2023-01-31 16:55:17  2023-01-31 16:55:23  2023-01-31 20:16:17  2023-01-31 20:20:21  2023-01-31 20:22:46  2023-01-31 20:23:15  2023-01-31 20:43:17  2023-02-01 12:44:29  2023-02-01 12:46:03  2023-02-01 12:50:21  2023-02-01 12:51:17  2023-02-01 13:17:00  2023-02-01 14:39:32  2023-02-01 14:40:09  2023-02-01 14:42:08  2023-02-01 14:44:46  2023-02-01 14:47:11  2023-02-01 14:49:21  2023-02-01 14:49:42  2023-02-01 14:51:57  (+62 more)
tests/: CMakeLists.txt  Makefile  helpfunctions_for_test.hh  test_Hello.cpp  test_benchmarks.cpp  test_givens.cpp  test_helpfunctions.cpp  test_householder.cpp  test_hungarian.hh  test_similiarity_transform.cpp  test_tests.cpp
tests/todo/: test_cases.hh
